Enhance afterlogin.html with styles and structure
Updated the HTML structure and added styles for better presentation.

--- a/afterlogin.html
+++ b/afterlogin.html
@@ -1,3 +1,40 @@
-<!DOCTYPE html
-<html
-<p>hey it's working<p>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>After Login | IndSeo01</title>
+  <style>
+    body {
+      background: #0f0f0f;
+      color: cyan;
+      font-family: Arial;
+      text-align: center;
+      padding-top: 100px;
+    }
+    h1 { font-size: 2.2rem; margin-bottom: 1rem; }
+    p { font-size: 1.2rem; color: #aaa; }
+    a {
+      display: inline-block;
+      margin-top: 25px;
+      padding: 10px 20px;
+      background: cyan;
+      color: #000;
+      border-radius: 5px;
+      text-decoration: none;
+      font-weight: bold;
+    }
+    a:hover {
+      background: #09c;
+      color: #fff;
+    }
+  </style>
+</head>
+<body>
+
+  <h1>Welcome, Core User</h1>
+  <p>You have successfully logged in to the secure area.</p>
+
+  <a href="index.html">Go Back</a>
+
+</body>
+</html>
