--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <style>
       * { margin: 0; padding: 0; box-sizing: border-box; font-family: Arial, sans-serif; }
       body { background: #0f0f0f; color: #f5f5f5; line-height: 1.6; }
-      header { background: #111; padding: 1rem 2rem; display: flex; justify-content: space-between; align-items: center; }
+      header { background: #111; padding: 1rem 2rem; display: flex; justify-content: space-between; align-items: center;; position: fixed; top: 0; left: 0; right: 0; width: 100%; z-index: 999; }
       header h1 { font-size: 1.5rem; color: #0ff; margin-left: 10px; }
       header .logo-container { display: flex; align-items: center; }
       header img.logo { width: 40px; height: 40px; border-radius: 5px; }
