Update title in index.html

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>IndSeo01 Industries | Weapon Intelligence</title>
+    <title>IndSeo01 Industries</title>
     <link rel="icon" type="image/png" href="https://drive.google.com/thumbnail?id=1cNHG2vlNgLNIHCVdKUl3oO1LpjUM5BWp">
     <style>
       * { margin: 0; padding: 0; box-sizing: border-box; font-family: Arial, sans-serif; }
