--- a/index.html
+++ b/index.html
@@ -10,22 +10,18 @@
          color: #0ff;
          text-decoration: none;
          }
- 
-         #home-link:hover {
-         color: white;
-         text-shadow: 0 0 10px cyan;
-          }
-
+    
       * { margin: 0; padding: 0; box-sizing: border-box; font-family: Arial, sans-serif; }
-      body { background: #0f0f0f; color: #f5f5f5; line-height: 1.6; }
-      header { background: #111; padding: 1rem 2rem; display: flex; justify-content: space-between; align-items: center;; position: fixed; top: 0; left: 0; right: 0; width: 100%; z-index: 999; }
+      body { background: #0a1111; color: #f5f5f5; line-height: 1.6; }
+      header { background: #111; padding: 1rem 2rem; display: flex; justify-content: space-between;
+         align-items: center;; position: fixed; top: 0; left: 0; right: 0; width: 100%; z-index: 999; }
       header h1 { font-size: 1.5rem; color: #0ff; margin-left: 10px; }
       header .logo-container { display: flex; align-items: center; }
       header img.logo { width: 40px; height: 40px; border-radius: 5px; }
       nav a { margin-left: 20px; color: #ccc; text-decoration: none; }
       nav a:hover { color: #0ff; }
-
-      .hero { height: 90vh; display: flex; flex-direction: column; justify-content: center; align-items: center; text-align: center; padding: 2rem; background: url('https://images.unsplash.com/photo-1608379867233-70da6d56bb49') no-repeat center center/cover; }
+      .hero { height: 90vh; display: flex; flex-direction: column; justify-content: center; align-items: center; text-align: center; padding: 2rem;
+         background: url('https://images.unsplash.com/photo-1608379867233-70da6d56bb49') no-repeat center center/cover; }
       .hero h2 { font-size: 2.5rem; margin-bottom: 1rem; color: #0ff; text-shadow: 2px 2px 10px #000; }
       .hero p { max-width: 600px; margin-bottom: 1.5rem; font-size: 1.2rem; background: rgba(0,0,0,0.5); padding: 1rem; border-radius: 10px; }
       .btn { padding: 0.7rem 1.5rem; border: none; background: #0ff; color: #000; font-weight: bold; cursor: pointer; border-radius: 5px; }
@@ -39,7 +35,7 @@
       .card { background: #1a1a1a; padding: 1.5rem; border-radius: 10px; box-shadow: 0 0 10px rgba(0,255,255,0.3); }
       .card h4 { margin-bottom: 0.5rem; color: #0ff; }
 
-      .login-section { background: #111; padding: 3rem 2rem; text-align: center; }
+      .login-section { background: #0a1111; padding: 3rem 2rem; text-align: center; }
       .login-box, .signup-box { background: #1a1a1a; padding: 2rem; max-width: 400px; margin: auto; border-radius: 10px; box-shadow: 0 0 15px rgba(0,255,255,0.3); }
       .login-box h3, .signup-box h3 { margin-bottom: 1.5rem; color: #0ff; }
       .login-box input, .signup-box input { width: 100%; padding: 0.7rem; margin: 0.5rem 0; border: none; border-radius: 5px; }
@@ -48,7 +44,7 @@
       .toggle-link { margin-top: 10px; display: block; text-align: center; color: #0ff; cursor: pointer; }
       .toggle-link:hover { text-decoration: underline; }
 
-      footer { background: #111; padding: 1rem; text-align: center; font-size: 0.9rem; color: #888; }
+      footer { background: #0a1111; padding: 1rem; text-align: center; font-size: 0.9rem; color: #888; }
 
       @media (max-width: 768px) {
         .hero h2 { font-size: 1.8rem; }
@@ -163,17 +159,6 @@
     </div>
 
     <script>
-      // Toggle between Login and Sign-Up forms
-      function showSignUp() {
-        document.getElementById('login-box').style.display = 'none';
-        document.getElementById('signup-box').style.display = 'block';
-      }
-
-      function showLogin() {
-        document.getElementById('signup-box').style.display = 'none';
-        document.getElementById('login-box').style.display = 'block';
-      }
-
       // Login Function
 function login() {
   const username = document.getElementById('username').value.trim();
